--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-kepp going,  never giveup
+keep going,  never giveup
+Nothing is impossible if you pour you heart into it
+Creating a new branch is quick
