--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 keep going,  never giveup
 Nothing is impossible if you pour you heart into it
-Creating a new branch is quick
+Creating a new branch is very quick.
