--- a/README
+++ b/README
@@ -1,7 +1,3 @@
 keep going,  never giveup
-Nothing is impossible if you pour you heart into it
-<<<<<<< HEAD
+Nothing is impossible if you pour you heart into it.
 Creating a new branch is very quick and very simple.
-=======
-Creating a new branch is very quick and very simple.
->>>>>>> feature1
