--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 keep going,  never give uppppp.
 Nothing is impossible if you pour you heart into it.
-Creating a new branch is very quick and very simple.
+Creating a new branch is quick and simple.
 Fire proves gold, adversity proves a man.
